# ft-ui

./: .gitignore  AGENT_DEPLOY.md  CLAUDE.md  README.md  SETUP.md  pyproject.toml
scripts/: start-servers.sh  stop-servers.sh
skills/askuserquestions/: ASKUSERQUESTIONS.md
src/future_tokenizer/: __init__.py  __main__.py
src/future_tokenizer/api/: server.py
src/future_tokenizer/core/: client.py  models.py
src/future_tokenizer/tui/: __init__.py  app.py
src/runeforge_canvas/: __init__.py  __main__.py  app.py  auth.py  client.py  models.py  skills.py
src/runeforge_canvas/api/: __init__.py  server.py
src/runeforge_canvas/core/: __init__.py  canvas_format.py  client.py  models.py  skills.py  skillsets.py
src/runeforge_canvas/tui/: __init__.py  app.py
src/runeforge_canvas/widgets/: minimap.py  operations.py  path.py
tests/: __init__.py  conftest.py  test_canvas_format.py  test_client.py  test_models.py  test_pipeline.py  test_read_file_content.py  test_selection_context.py  test_skills.py  test_skillsets.py
web/: index.html  package-lock.json  package.json  playwright.config.ts
web/e2e/: mobile-layout.spec.ts  mode-toggle.spec.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: CanvasNode.tsx  CanvasView.tsx  Login.tsx  NodeDrawer.tsx  PipelineProgress.tsx  SkillsPane.tsx  SkillsetPane.tsx  SubsectionCard.tsx  SubsectionViewer.tsx  TutorialHint.tsx
web/src/test/: TutorialHint.test.tsx  responseParser.test.ts
web/src/types/: canvas.ts  canvasArtifact.ts  index.ts  subsection.ts
web/src/utils/: markdown.tsx  (+1 more)
(+6 files in other folders)
