[project]
name = "runeforge-canvas"
version = "0.1.0"
description = "graph-based plan-building IDE with runeforge cognitive operations"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.50.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "claude-agent-sdk>=0.1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
web = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
runeforge-canvas = "runeforge_canvas.__main__:main"
runeforge-api = "runeforge_canvas.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
